swaager ref error fix
